#2-Completed initial markups, page jump links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,57 @@
 </div> <!--Navigation should be a hidden side bar-->
 
 <div class="template header">
-    <!--Throw a banner of some sort in here-->
+    <!--Throw a banner of some sort in here, not sure yet-->
 </div>
 
 <div class="template content">
+<a id="opener">
+  <div class="opener">
+      <img idsrc='https://picsum.photos/600/600'>
+    <div class="openText">
+    <h3>I AM</h3>
+    <h1>AHKIEM CRENSHAW</h1>
+    <h3>AND I AM A</h3>
+    <h2>JUNIOR WEB DEVELOPER</h2>
+    </div>
+  </div>
+</a>
+
+<a id="profile">
+  <div class="profile">
+      <div class="profileStory">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Accusantium optio reiciendis quos qui pariatur, 
+          autem corrupti officia molestiae maxime corporis commodi veritatis rem ex architecto nobis.
+      </div>
+  </div>
+</a>
+
+<a id="exp">
+  <div class="experience">
+    <div class="exp">
+        <h3>Proficient use of:</h3>
+<!--We want images of our programming languages here, we can use grid to format-->
+    </div>
+  </div>
+</a>
+
+  <div class="projects">
+    <div class="projectTxt">
+
+
+    </div>
+  </div>
+
+
     <!--This is where all your info will go-->
 </div> 
 
-<div class="template footer"></div> <!--Social media links and a copyright stamp-->
+
+
+<div class="template footer">
+<!--Social media links and a copyright stamp-->    
+</div> 
 
 </body>
 </html>
