#3-Not much here, just saving and packing up

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 </div> <!--Navigation should be a hidden side bar-->
 
 <div class="template header">
+    <h1>WELCOME</h1>
     <!--Throw a banner of some sort in here, not sure yet-->
 </div>
 
 <div class="template content">
+
+
 <a id="opener">
   <div class="opener">
       <img idsrc='https://picsum.photos/600/600'>
@@ -54,12 +57,15 @@
   </div>
 </a>
 
+
+<a id="projects">
   <div class="projects">
     <div class="projectTxt">
 
 
     </div>
   </div>
+</a>
 
 
     <!--This is where all your info will go-->
@@ -68,6 +74,7 @@
 
 
 <div class="template footer">
+    Copyright &copy; 2018
 <!--Social media links and a copyright stamp-->    
 </div> 
 
