#4-After much frustratioin, added some images and styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ahkiem Crenshaw</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 
@@ -27,8 +27,8 @@
 
 
 <a id="opener">
-  <div class="opener">
-      <img idsrc='https://picsum.photos/600/600'>
+  <div class='open-parallax'>
+
     <div class="openText">
     <h3>I AM</h3>
     <h1>AHKIEM CRENSHAW</h1>
