#5-Added images, minor/temporary styling. Add projects.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
           Accusantium optio reiciendis quos qui pariatur, 
           autem corrupti officia molestiae maxime corporis commodi veritatis rem ex architecto nobis.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate quos inventore, 
+          rerum maxime facere culpa dolorum quaerat error eveniet reiciendis autem 
+          dignissimos, illo commodi! 
+          Nobis obcaecati minus enim impedit eius!
       </div>
   </div>
 </a>
@@ -60,7 +64,8 @@
 
 <a id="projects">
   <div class="projects">
-    <div class="projectTxt">
+      <div class="projectTxt">
+            <p>Here are some projects:</p>
 
 
     </div>
