#7: Minor styling on the navbar. Proceed with populating content.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body id='all'>
     <div id="navi" class="navigation">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Who am I?</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" font-size='20px'>&times;</a>
+        <a href="#">Top</a>
         <a href="#">Personal Story</a>
         <a href="#">Experience</a>
         <a href="#">Personal Projects</a>
