#8: Added Profile Story text and Experience text. Seek images for each prog language

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
         <a id="profile">
             <div class="profile">
                 <div class="profileStory">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusantium optio reiciendis quos qui pariatur,
-                    autem corrupti officia molestiae maxime corporis commodi veritatis rem ex architecto nobis.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate quos inventore,
-                    rerum maxime facere culpa dolorum quaerat error eveniet reiciendis autem
-                    dignissimos, illo commodi!
-                    Nobis obcaecati minus enim impedit eius!
+                    I quest to make an impact by spreading peace and positivity,
+                    seeking more tangible methods with which to heal and elevate my environment,
+                    as I’ve done for years as a therapist.
+                    <br />
+                    <br />
+                    As a developer, I want to employ my present skillset,
+                    and adopt new abilities into my repertoire so that wherever I go,
+                    I put others at ease with my reliability. I will not only bring my diligence
+                    to the table, but I will learn what I must to bring excellence as well.
                 </div>
             </div>
         </a>
@@ -62,6 +64,22 @@
                 <div class="exp">
                     <h3>Proficient use of:</h3>
                     <!--We want images of our programming languages here, we can use grid to format-->
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JAVASCRIPT</li>
+                        <ul>
+                            <li>Node.js</li>
+                            <li>jQuery</li>
+                            <li>Express</li>
+                            <li>MongoDB</li>
+                        </ul>
+                        <li>REACT</li>
+                        <li>PYTHON</li>
+                        <ul>
+                            <li>Django</li>
+                        </ul>
+                    </ul>
                 </div>
             </div>
         </a>
