#11: Added text styles.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ahkiem Crenshaw</title>
     <link rel="stylesheet" href="/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+
 </head>
 
 
@@ -14,7 +16,7 @@
     <div id="navi" class="navigation">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" font-size='20px'>&times;</a>
         <a href="#opener">Top</a>
-        <a href="#profile">Personal Story</a>
+        <a href="#profile">About Me</a>
         <a href="#exp">Experience</a>
         <a href="#projects">Personal Projects</a>
     </div>
@@ -54,7 +56,7 @@
                     As a developer, I want to employ my present skillset,
                     and adopt new abilities into my repertoire so that wherever I go,
                     I put others at ease with my reliability. I will not only bring my diligence
-                    to the table, but I will learn what I must to bring excellence as well.
+                    to the table, but I will learn what I must to exhibit excellence as well.
                 </div>
             </div>
         </a>
@@ -88,7 +90,7 @@
         <a name="projects">
             <div class="projects">
                 <div class="projectTxt">
-                    <p>Here are some projects:</p>
+                    <p>Here are some of my projects:</p>
 
                     <a href="https://github.com/ahkiemcm/Hangman-X" class="projectLink">Hangman-X</a>
                     <br />
