12: Light content edits

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h3>I AM</h3>
                     <h1>AHKIEM CRENSHAW</h1>
                     <h3>AND I AM A</h3>
-                    <h2>JUNIOR SOFTWARE DEVELOPER</h2>
+                    <h2>SOFTWARE DEVELOPER</h2>
                 </div>
             </div>
         </a>
