--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#exp">Experience</a>
         <a href="#projects">Personal Projects</a>
         <a href="https://github.com/ahkiemcm">GitHub</a>
-        <a href="../Portfolio/documents/A_Crenshaw_Resume2018.pdf">Resume</a>
+        <a href="documents/A_Crenshaw_Resume2018.pdf">Resume</a>
         <a href="https://www.linkedin.com/in/ahkiem-crenshaw">LinkedIn</a>
     </div>
     <!--Navigation should be a hidden side bar-->
